<resources>
    <string name="app_name">OK-BABY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="pee">Pee</string>
    <string name="poo">Poo</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="side">Side</string>
    <string name="left">Left</string>
    <string name="date">Date</string>
    <string name="runny">Runny</string>
    <string name="right">Right</string>
    <string name="color">Color</string>
    <string name="end_time">End</string>
    <string name="bottle">Bottle</string>
    <string name="amount">Amount</string>
    <string name="texture">Texture</string>
    <string name="start_time">Start</string>
    <string name="email_label">email</string>
    <string name="food_entry">Food Entry</string>
    <string name="sign_in_title">ok baby</string>
    <string name="password_label">password</string>
    <string name="sleep_entry">Sleep Entry</string>
    <string name="sign_in_btn_label">Log in</string>
    <string name="diaper_entry">Diaper Entry</string>
    <string name="sign_up_link_label">Sign up</string>
    <string name="breastfeeding">Breastfeeding</string>
    <string name="sleep_report_title">Sleep Report</string>
    <string name="switch_to_table_btn_label">Table</string>
    <string name="switch_to_graph_btn_label">Graphs</string>
    <string name="sign_up_pre_text">Don\'t have an account?\t</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_bar_table_title">Table</string>
    <string name="bottom_bar_chart_title">Graphs</string>
    <string name="sleep">Sleep</string>
    <string name="food">Food</string>
    <string name="diaper">Diaper</string>
    <string name="empty_table_error_msg">No entries added yet</string>
    <string name="cancel">Cancel</string>
    <string name="ml">ml</string>
    <string name="default_bottle_amount">30</string>
    <string name="add">Add</string>
    <string name="baby_name">Baby Name</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="update_profile">Update Profile</string>
    <string name="default_age">6 months old</string>
    <string name="onebabyimage">oneBabyImage</string>


    <string-array name="food_type">
        <item>Breastfeeding</item>
        <item>Bottle</item>
    </string-array>

    <string-array name="food_side">
        <item>Left</item>
        <item>Right</item>
    </string-array>

    <string-array name="diaper_type">
        <item>Poo</item>
        <item>Pee</item>
    </string-array>

    <string-array name="diaper_texture">
        <item>Runny</item>
        <item>Very Runny</item>
        <item>Mushy</item>
    </string-array>

</resources>
