<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border_circular"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/diaper_entry"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!--Date-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/date"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/rounded_rectangle_stroke"/>

            </LinearLayout>

            <!--Time-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/time"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/rounded_rectangle_stroke"/>

            </LinearLayout>

            <!--Type-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/type"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <Spinner
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contextClickable="false"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

            </LinearLayout>

            <!--Texture-->
            <LinearLayout
                android:id="@+id/textureLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/texture"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <Spinner
                    android:id="@+id/texture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contextClickable="false"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center" />

            </LinearLayout>

            <!--Color-->
            <LinearLayout
                android:id="@+id/colorLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:gravity="center">


                    <Button
                        android:id="@+id/redColor"
                        android:layout_width="34dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/red_color_circle" />

                    <Button
                        android:id="@+id/blackColor"
                        android:layout_width="34dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/black_color_circle" />

                    <Button
                        android:id="@+id/brownColor"
                        android:layout_width="34dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/brown_color_circle" />


                </LinearLayout>

                <!-- TODO-->


            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/addButton"
                    android:background="@drawable/button_border"
                    android:text="Cancel" />


                <Button
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/button_border"
                    android:text="Add" />
            </RelativeLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>